<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".StandingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_60dp"
        android:background="@drawable/bg_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/robotoMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standings"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/buttonGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginBottom="@dimen/_20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/standings"
                android:layout_width="@dimen/_370dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_25dp"
                android:background="@drawable/bg_standings"
                app:layout_constraintCircleRadius="@dimen/_20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView4"
                    android:layout_width="@dimen/_25dp"
                    android:layout_height="@dimen/_25dp"
                    android:layout_marginTop="@dimen/_15dp"
                    android:layout_marginStart="@dimen/_20dp"
                    android:src="@drawable/logo_badges"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/premier_league"
                    style="@style/robotoBold"
                    android:textSize="@dimen/_14sp"
                    android:layout_marginStart="@dimen/_10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/robotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/club"
                    android:textSize="@dimen/_14sp"
                    android:layout_marginTop="@dimen/_15dp"
                    app:layout_constraintStart_toStartOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/textWin"
                    style="@style/robotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w"
                    android:textSize="@dimen/_14sp"
                    android:layout_marginStart="@dimen/_145dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textDraw"
                    style="@style/robotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d"
                    android:textSize="@dimen/_14sp"
                    android:layout_marginStart="@dimen/_30dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textWin"
                    app:layout_constraintStart_toEndOf="@+id/textWin"
                    app:layout_constraintTop_toTopOf="@+id/textWin" />

                <TextView
                    android:id="@+id/textLost"
                    style="@style/robotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l"
                    android:textSize="@dimen/_14sp"
                    android:layout_marginStart="@dimen/_30dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textDraw"
                    app:layout_constraintStart_toEndOf="@+id/textDraw"
                    app:layout_constraintTop_toTopOf="@+id/textDraw" />

                <TextView
                    android:id="@+id/textPoint"
                    style="@style/robotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point"
                    android:textSize="@dimen/_14sp"
                    android:layout_marginStart="@dimen/_30dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textLost"
                    app:layout_constraintStart_toEndOf="@+id/textLost"
                    app:layout_constraintTop_toTopOf="@+id/textLost" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewStandings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textWin"
                    tools:listitem="@layout/card_standings" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>