<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_match"
    tools:context=".ActivitySplash">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoPremier"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30dp"
        android:layout_marginTop="@dimen/_25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_premier" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageHome"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_70dp"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_marginStart="@dimen/_60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoPremier"
        app:srcCompat="@drawable/arsenal" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageAway"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_70dp"
        android:layout_marginEnd="@dimen/_60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageHome"
        app:srcCompat="@drawable/arsenal" />

    <TextView
        android:id="@+id/textScored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/__2_2"
        android:textColor="@color/white"
        style="@style/robotoMedium"
        android:textSize="@dimen/_30sp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintEnd_toStartOf="@+id/imageAway"
        app:layout_constraintStart_toEndOf="@+id/imageHome"
        app:layout_constraintTop_toTopOf="@+id/imageHome" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_time"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/imageAway"
        app:layout_constraintStart_toEndOf="@+id/imageHome"
        app:layout_constraintTop_toBottomOf="@+id/textScored" />

    <TextView
        android:id="@+id/textGoalHome"
        style="@style/robotoMedium"
        android:layout_width="@dimen/_130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/de_jong"
        android:layout_marginStart="@dimen/_50dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHome" />

    <TextView
        android:id="@+id/textGoalAway"
        style="@style/robotoMedium"
        android:layout_width="@dimen/_130dp"
        android:layout_height="wrap_content"
        android:text="@string/de_jong"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAway" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistic_match"
        android:layout_marginTop="@dimen/_100dp"
        android:textColor="@color/white"
        style="@style/robotoBold"
        android:textSize="@dimen/_17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        style="@style/robotoReguler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_22dp"
        android:text="@string/shoot"
        android:textSize="@dimen/_15sp"
        android:textColor="@color/line"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textShotHome"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        android:layout_marginEnd="@dimen/_110dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textShotAway"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        android:layout_marginStart="110dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/shotOnTarget"
        style="@style/robotoReguler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoot_on_target"
        android:textColor="@color/line"
        android:textSize="@dimen/_15sp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textShotTargetHome"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/shotOnTarget"
        app:layout_constraintEnd_toEndOf="@+id/textShotHome"
        app:layout_constraintStart_toStartOf="@+id/textShotHome" />

    <TextView
        android:id="@+id/textShotTargetAway"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/shotOnTarget"
        app:layout_constraintEnd_toEndOf="@+id/textShotAway"
        app:layout_constraintStart_toStartOf="@+id/textShotAway" />

    <TextView
        android:id="@+id/ballPossession"
        style="@style/robotoReguler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ball_possession"
        android:textColor="@color/line"
        android:textSize="@dimen/_15sp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="@+id/shotOnTarget"
        app:layout_constraintStart_toStartOf="@+id/shotOnTarget"
        app:layout_constraintTop_toBottomOf="@+id/shotOnTarget" />

    <TextView
        android:id="@+id/textPossessionHome"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/ballPossession"
        app:layout_constraintEnd_toEndOf="@+id/textShotTargetHome"
        app:layout_constraintStart_toStartOf="@+id/textShotTargetHome" />

    <TextView
        android:id="@+id/textPossessionAway"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/ballPossession"
        app:layout_constraintEnd_toEndOf="@+id/textShotTargetAway"
        app:layout_constraintStart_toStartOf="@+id/textShotTargetAway" />

    <TextView
        android:id="@+id/pass"
        style="@style/robotoReguler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textColor="@color/line"
        android:textSize="@dimen/_15sp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="@+id/ballPossession"
        app:layout_constraintStart_toStartOf="@+id/ballPossession"
        app:layout_constraintTop_toBottomOf="@+id/ballPossession" />

    <TextView
        android:id="@+id/textPassHome"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="@+id/textPossessionHome"
        app:layout_constraintStart_toStartOf="@+id/textPossessionHome" />

    <TextView
        android:id="@+id/textPassAway"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="@+id/textPossessionAway"
        app:layout_constraintStart_toStartOf="@+id/textPossessionAway" />

    <TextView
        android:id="@+id/passAkurasi"
        style="@style/robotoReguler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_accuracy"
        android:textColor="@color/line"
        android:textSize="@dimen/_15sp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintStart_toStartOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <TextView
        android:id="@+id/textAkurasiAway"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/passAkurasi"
        app:layout_constraintEnd_toEndOf="@+id/textPassAway"
        app:layout_constraintStart_toStartOf="@+id/textPassAway" />

    <TextView
        android:id="@+id/textAkurasiHome"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/passAkurasi"
        app:layout_constraintEnd_toEndOf="@+id/textPassHome"
        app:layout_constraintStart_toStartOf="@+id/textPassHome" />

    <TextView
        android:id="@+id/foul"
        style="@style/robotoReguler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foul"
        android:textColor="@color/line"
        android:textSize="@dimen/_15sp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="@+id/passAkurasi"
        app:layout_constraintStart_toStartOf="@+id/passAkurasi"
        app:layout_constraintTop_toBottomOf="@+id/passAkurasi" />

    <TextView
        android:id="@+id/textFoulAway"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/foul"
        app:layout_constraintEnd_toEndOf="@+id/textAkurasiAway"
        app:layout_constraintStart_toStartOf="@+id/textAkurasiAway" />

    <TextView
        android:id="@+id/textFoulHome"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/foul"
        app:layout_constraintEnd_toEndOf="@+id/textAkurasiHome"
        app:layout_constraintStart_toStartOf="@+id/textAkurasiHome" />

    <TextView
        android:id="@+id/yellow"
        style="@style/robotoReguler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow_card"
        android:textColor="@color/line"
        android:textSize="@dimen/_15sp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="@+id/foul"
        app:layout_constraintStart_toStartOf="@+id/foul"
        app:layout_constraintTop_toBottomOf="@+id/foul" />

    <TextView
        android:id="@+id/textYellowHome"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/yellow"
        app:layout_constraintEnd_toEndOf="@+id/textFoulHome"
        app:layout_constraintStart_toStartOf="@+id/textFoulHome" />

    <TextView
        android:id="@+id/textYellowAway"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/yellow"
        app:layout_constraintEnd_toEndOf="@+id/textFoulAway"
        app:layout_constraintStart_toStartOf="@+id/textFoulAway" />

    <TextView
        android:id="@+id/corners"
        style="@style/robotoReguler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corner_kick"
        android:textColor="@color/line"
        android:textSize="@dimen/_15sp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="@+id/yellow"
        app:layout_constraintStart_toStartOf="@+id/yellow"
        app:layout_constraintTop_toBottomOf="@+id/yellow" />

    <TextView
        android:id="@+id/textCornerHome"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/corners"
        app:layout_constraintEnd_toEndOf="@+id/textYellowHome"
        app:layout_constraintStart_toStartOf="@+id/textYellowHome" />

    <TextView
        android:id="@+id/textCornerAway"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/corners"
        app:layout_constraintEnd_toEndOf="@+id/textYellowAway"
        app:layout_constraintStart_toStartOf="@+id/textYellowAway" />

    <TextView
        android:id="@+id/offside"
        style="@style/robotoReguler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offside"
        android:textColor="@color/line"
        android:textSize="@dimen/_15sp"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="@+id/corners"
        app:layout_constraintStart_toStartOf="@+id/corners"
        app:layout_constraintTop_toBottomOf="@+id/corners" />

    <TextView
        android:id="@+id/textOffsideHome"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/offside"
        app:layout_constraintEnd_toEndOf="@+id/textCornerHome"
        app:layout_constraintStart_toStartOf="@+id/textCornerHome" />

    <TextView
        android:id="@+id/textOffsideAway"
        style="@style/robotoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        app:layout_constraintBottom_toBottomOf="@+id/offside"
        app:layout_constraintEnd_toEndOf="@+id/textCornerAway"
        app:layout_constraintStart_toStartOf="@+id/textCornerAway" />

</androidx.constraintlayout.widget.ConstraintLayout>