<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardMaterial"
        android:layout_width="@dimen/_380dp"
        android:layout_height="@dimen/_65dp"
        android:paddingStart="@dimen/_15dp"
        android:paddingEnd="@dimen/_15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/urutan"
            style="@style/robotoMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_"
            android:textSize="@dimen/_15sp"
            android:layout_marginStart="@dimen/_15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/namePlayer"
            style="@style/robotoMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aleksandar_mitrovic"
            android:textSize="@dimen/_15sp"
            android:layout_marginStart="@dimen/_15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/urutan"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goal"
            style="@style/robotoMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_21"
            android:textSize="@dimen/_14sp"
            android:layout_marginEnd="@dimen/_35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageview"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@color/line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>